--- a/internal/generator/templates/bridges/whatsapp.yaml.tmpl
+++ b/internal/generator/templates/bridges/whatsapp.yaml.tmpl
@@ -1,6 +1,6 @@
 # Network-specific config options
 network:
-    os_name: Muxchat WhatsApp bridge
+    os_name: Muxbee WhatsApp bridge
     browser_name: unknown
     displayname_template: '{{`{{or .BusinessName .PushName .Phone "Unknown user"}} (WA)`}}'
     call_start_notices: true
